--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,18 @@
 {
+    "name": "文言文背誦大師之旅",
+    "short_name": "文言大師",
+    "start_url": "/index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#000000",
     "icons": [
         {
-            "src": "icons/icon-192x192.png",
+            "src": "icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
