--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
     "name": "文言文背誦大師之旅",
     "short_name": "文言大師",
-    "start_url": "/index.html",
+    "start_url": "/wenyanmaster/",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
+    
     "icons": [
         {
-            "src": "icon-192x192.png",
+            "src": "/wenyanmaster/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon-512x512.png",
+            "src": "/wenyanmaster/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
